# instagram_commerc_agent

./: system.md  tasks.md
backend/: .gitignore  dependencies.py  main.py  pyproject.toml  worker.py
backend/core/: config.py  security.py
backend/data/: barbers.csv  services.csv  services.txt  silver_blade_knowledge_base.md
backend/db/: base.py  init_db.py  models.py  session.py
backend/routers/: booking.py  test.py  webhook.py
backend/services/: generate_bill.py  get_slots.py
frontend/: package-lock.json  package.json
frontend/app/payment/: page.tsx
frontend/components/: BookingDetails.tsx
frontend/components/payment/: BookingDetails.tsx  BookingForm.tsx  BookingSummary.tsx  CheckoutForm.tsx  ManualCheckout.tsx  types.ts
