[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.135.3",
    "ipykernel>=7.2.0",
    "langchain>=1.2.15",
    "langgraph>=1.1.6",
    "stripe>=15.0.1",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "pydantic-settings>=2.0.0",
    "uvicorn>=0.44.0",
    "arq>=0.28.0",
    "redis>=5.3.1",
    "reportlab>=4.4.10",
    "python-barcode>=0.16.1",
    "pandas>=3.0.2",
    "langchain-groq>=1.1.2",
    "langchain-postgres>=0.0.17",
    "chromadb>=1.5.8",
    "langchain-text-splitters>=1.1.2",
]
